<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="stopsFileName">data/stops.xml</string>
    <string name="stopsFullDBFileName">data/stopsFullDB.xml</string>
    <string name="title_activity_arrival">ArrivalActivity</string>
    <string name="siteAddress">http://m.tosamara.ru/ostanovki/</string>
    <string name="php_bridge">http://m.tosamara.ru/xml_bridge.php</string>
    <string name="title_activity_direction_select">DirectionSelectActivity</string>
    <string name="cmdNearMeText">Рядом</string>
    <string name="MinuteTitle">" мин"</string>
    <string name="DirectionTitle">Направление</string>
    <string name="DirectionSelectActivityTitle">В направлении</string>
    <string name="ArrivalActivityTitle">Прибытие</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="SettingsActivityTitle">Настройки</string>
    <string name="RadiusLabel">"Радиус поиска остановок: "</string>
    <string name="RadiusMeterLabel">" м"</string>
    <string name="AutoUpdateLabel">Автообновление</string>
    <string name="OffSiteLabel">"Официальный сайт: "</string>
    <string name="SiteAddress">m.tosamara.ru</string>

    <string name="TransAbsentMessage">Нет оперативной информации. Возможно, транспорт уже не ходит либо отсутствует на
        участках от начальных остановок маршрутов до выбранной.
    </string>
    <string name="app_name">Самара Транспорт</string>
    <string name="stopNameHint">Название остановки</string>
    <string name="cmdFindText">Найти</string>
    <string name="createDBlabel">Создать БД</string>
    <string name="StopSearchActivityTitle">К остановке</string>
    <string name="TurnOnNavigationPromt">Навигация отключена! Перейти в настройки для включения?</string>
    <string name="YesText">Да</string>
    <string name="NoText">Нет</string>
    <string name="search_hint">Остановка</string>
    <string name="ConnectionProblemMessage">Не удается получить прогнозы прибытия! Проверьте соединение с интернетом.
    </string>
    <string name="XmlAPI">http://tosamara.ru/api/xml</string>
    <string name="AddInfoLabel">Расширенный прогноз</string>
    <string name="app_description">Прогнозы прибытия общественного транспорта для всех остановок Самары.\nДвижение более
        600 единиц трамваев, троллейбусов и муниципальных автобусов отслеживается в реальном времени с помощью
        GPS/ГЛОНАСС трекеров. Для составления точного прогноза учитывается расписание, дорожная ситуация, аварии и
        пробки.
        Приложение использует сервис аналитики Транспортного Оператора Самары http://tosamara.ru/api/\nАвтор оригинального
        приложения - Артем Коротков\nАвтор редизайна - Николай Чернов
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtShowBusesLabel">Отображать автобусы</string>
    <string name="txtShowTrollsLabel">Отображать троллейбусы</string>
    <string name="txtShowTramsLabel">Отображать трамваи</string>
    <string name="txtShowCommLabel">Отображать маршрутки</string>
    <string name="title_activity_about">О приложении</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDYQjZ55U4qLRywoE5qaP5H60LszcTrySQ</string>
    <string name="rate_title">Оцените приложение</string>
    <string name="rate_message">Если Вам понравилось это приложение, оцените его в Play Market. Это займет не больше минуты. Спасибо за поддержку!</string>
    <string name="settings_background_label">Показывать уведомления с прогнозом без запуска приложения (работает в тестовом режиме)</string>
    <string name="no_response_from_server">Не удалось получить ответ от сервера tosamara.ru</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="theme_picker">Тема</string>
    <string name="color_picker_message">Изменения вступят в силу после перезапуска приложения. Перезапустить сейчас?</string>
    <string name="reboot">Перезапустить</string>
    <string name="title_activity_preference">Настройки</string>

    <string name="settings_transport_types_header">Отображаемые виды транспорта</string>
    <string name="settings_show_buses">Автобусы</string>
    <string name="settings_show_trolleybuses">Троллейбусы</string>
    <string name="settings_show_trams">Трамваи</string>
    <string name="settings_show_comm">Маршрутки</string>
    <string name="settings_enable_animations">Активировать анимации</string>
    <string name="pref_description_enable_animation">Отображать анимации (для девайсов с прошикой >5.0)</string>
    <string name="settings_enable_autoupdate">Автообновление</string>
    <string name="pref_description_enable_autoupdate">При открытии списка прибывающего транспорта, он будет автоматически обновляться каждую минуту</string>
    <string name="settings_enable_background_service">Фоновый сервис</string>
    <string name="pref_description_enable_background_service">Сервис будет отображать уведомления о прибывающем транспорте,
        когда Вы будете находиться рядом с остановкой (может ускорить разрядку батареи)</string>

    <string name="settings_search_radius">Радиус поиска остановок</string>
    <string name="pref_description_search_radius">радиус поиска остановок</string>
    <string name="share_text">Советую "Самара Транспорт" - прогнозы прибытия общественного транспорта. Отличная замена обычной Прибывалки! https://play.google.com/store/apps/details?id=com.nikolaychernov.samaratransport</string>
    <string-array name="pref_radius_list_values">
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>1250</item>
        <item>1500</item>
    </string-array>

    <string-array name="pref_radius_list">
        <item>250 метров</item>
        <item>500 метров</item>
        <item>750 метров</item>
        <item>1000 метров</item>
        <item>1250 метров</item>
        <item>1500 метров</item>
    </string-array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>